# GLOQSpaceAllocation

./: .gitignore  AGENTS.md  Cargo.toml  ER.md  KL.md  LICENSE  MP.md  QC.md  README.md  SP.md  package.json  pnpm-lock.yaml  vercel.json
apps/api/: Cargo.toml
apps/api/src/: auth.rs  config.rs  error.rs  main.rs
crates/render-wasm/: Cargo.toml
crates/render-wasm/pkg/: .gitignore  package.json  render_wasm.d.ts  render_wasm.js  render_wasm_bg.wasm  render_wasm_bg.wasm.d.ts
crates/render-wasm/src/: lib.rs
layout/: layout_contract.rs  layout_massing.rs  layout_space.rs
setup/: README.md  check-web-3001.mjs  down-web-3001.mjs  ensure-render-wasm.mjs  up-web-3001.mjs  web-3001-runtime.mjs
supabase/: config.toml
tasks/: 001 minimal editor shell.md  002 preview 3001.md  003 api server skeleton.md  004 supabase project persistence.md  005 supabase auth in web.md  006 supabase bearer jwt auth.md  006.01 email password auth in web.md  007 units module.md  007.01 units parser hardening.md  007.02 decimal-inch and default-unit parsing.md  008 level manager.md  009 3d space view.md  009.01 3d view polish.md  010 selection dropdown and workspace cleanup.md  011 overlay-safe editor shell.md  012 test menu and sample case fixtures.md  012.01 draggable test dashboard and polygon apartment cases.md  013 3d visibility modes and space edge readability.md  013.01 3d view recovery and regression guards.md  014 site plan setbacks and mixed cases.md  014.01 site plan mixed case hardening.md  014.02 3d adapter failure triage after 014.01.md  015 remove project browser.md  016 simplify ribbon controls.md  016.01 remove sweep selection pipeline.md  016.02 generic multi-element selection.md  016.03 multi-view pick selection parity.md  017 compact level manager layout.md  017.01 shared level headers and aligned actions.md  018 draggable workspace windows.md  019 engine-generated sample site plan.md  020 road frontage driven site layout algorithm.md  FB001 editor unreachable on port 3001.md  FB002 vercel preview deployment not found.md  (+6 more)
(+39 files in other folders)
